...
    tools:context=".UserPortal">

    <TextView
        android:id="@+id/portal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Portal"
        android:textSize="32sp" />

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
