...
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:gravity="center_horizontal"
            android:layout_marginVertical="16dp"/>

...
